style(components): [date-picker] fix background covers the border(#8953)

--- a/packages/theme-chalk/src/date-picker/picker.scss
+++ b/packages/theme-chalk/src/date-picker/picker.scss
@@ -196,7 +196,6 @@
     }
 
     input {
-      background-color: map.get($input-disabled, 'fill');
       color: map.get($input-disabled, 'text-color');
       cursor: not-allowed;
       &::placeholder {
